collection_verified.txt
/Users/wzrdbook/.gemini/antigravity/scratch/solana-token-ecosystem/grit-dashboard/scripts/create_verified_collection.js:57
        uri: `${ R2_PUBLIC_URL } /metadata/collection.json`, // Assuming this exists or using a placeholder
              ^

SyntaxError: Unexpected identifier '$'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.11.1
